Fix metadata copy button styling
1. Remove redundant 'color' rule - this should be 'fill' and doesn't need to be set.
2. Fix width/height on button so that it doesn't look weird when focused
3. Update rule order/nesting. I feel that nesting modifiers makes them easier to read

--- a/src/components/metadata/styles/metadata.scss
+++ b/src/components/metadata/styles/metadata.scss
@@ -125,11 +125,11 @@ $list-inline-spacing: 0.2em;
   margin: 0 -$list-inline-spacing * 1.5;
   padding: 0;
   list-style: none;
-}
 
-.pipeline-metadata__value-list--inline li {
-  display: inline;
-  margin: $list-inline-spacing $list-inline-spacing * 1.5;
+  li {
+    display: inline;
+    margin: $list-inline-spacing $list-inline-spacing * 1.5;
+  }
 }
 
 .pipeline-metadata__value-list--commas li:not(:last-child):after {
@@ -152,33 +152,33 @@ $list-inline-spacing: 0.2em;
   display: flex;
   flex-grow: 1;
   align-items: center;
+
+  &--no-visible {
+    opacity: 0;
+  }
 }
 
-.pipeline-metadata__run-command-value--no-visible {
-  opacity: 0;
-}
-
-.pipeline-metadata__toolbox .pipeline-metadata__copy-button {
-  width: 1.2em;
-  height: 1.2em;
+.pipeline-metadata__copy-button {
+  width: auto;
+  height: auto;
   opacity: 0.55;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:active {
+    transform: translateY(1px);
+    opacity: 0.85;
+  }
 }
 
 .pipeline-metadata__copy-message {
   position: absolute;
   top: 0;
   left: 0;
-}
 
-.pipeline-metadata__copy-message--no-visible {
-  display: none;
-}
-
-.pipeline-metadata__copy-button:hover {
-  color: var(--color-default-alt);
-  opacity: 1;
-}
-
-.pipeline-metadata__copy-button:active {
-  transform: translateY(1px);
+  &--no-visible {
+    display: none;
+  }
 }
